[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-anything"
version = "0.1.0"
description = "A multimodal RAG system that can process and understand any type of document"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "RAG-Anything Contributors" },
]
keywords = ["rag", "multimodal", "llm", "document-processing", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "lightrag-hku>=1.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
ocr = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
]
audio = [
    "openai-whisper>=20230918",
]
video = [
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
]
all = [
    "rag-anything[ocr,audio,video]",
]

[project.urls]
Homepage = "https://github.com/HKUDS/RAG-Anything"
Repository = "https://github.com/HKUDS/RAG-Anything"
Issues = "https://github.com/HKUDS/RAG-Anything/issues"
Changelog = "https://github.com/HKUDS/RAG-Anything/blob/main/CHANGELOG.md"

[project.scripts]
rag-anything = "raganything.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["raganything"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["raganything"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Removed --cov flags so a quick `pytest` run doesn't require pytest-cov installed
# -s shows print() output during tests, useful for debugging locally
# --tb=short keeps tracebacks concise without losing useful context
# --no-header reduces noise in output when running tests frequently during dev
# Note: switched --tb=short to --tb=long locally so I get full tracebacks while learning the codebase
addopts = "-v -s --tb=long --no-header"
